--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,19 @@
 
 # testing
 /coverage
+/src/metadata
 
 # production
 /build
 
 # misc
 .DS_Store
+.env
 .env.local
+.env.development
 .env.development.local
 .env.test.local
+.env.production
 .env.production.local
 
 npm-debug.log*
